--- a/src/App.css
+++ b/src/App.css
@@ -22,19 +22,13 @@ body {
 }
 
 .content_container {
-  padding: 30px;
-  display: flex;
-  justify-content: flex-start;
   align-content: center;
+  display: flex;
   flex-flow: row wrap;
+  justify-content: flex-start;
+  padding: 30px;
   width: 70%;
-  margin: auto;
-}
-
-@media screen and (min-width: 1080px) {
-    .content_container {
-        width: 60%;
-    }
+  margin: 30px auto;
 }
 
 .hr_container{
@@ -46,21 +40,6 @@ body {
   flex-direction: column;
   margin: auto;
   width: 80%;
-}
-
-@media screen and (max-width: 610px) {
-    .header_container {
-        flex-direction: column;
-    }
-    .content_container {
-        width: 100%;
-        padding: 30px 0;
-        margin: 0;
-    }
-    .header_container {
-      margin: 0;
-      width: 100%;
-    }
 }
 
 .header {
@@ -95,4 +74,35 @@ body {
 
 .img {
   margin: auto;
+}
+
+@media screen and (max-width: 610px) {
+    .root {
+      height: 30%;
+      background-position: 50cm 75cm;
+    }
+    .header_container {
+        flex-direction: column;
+    }
+    .content_container {
+        width: 100%;
+        padding: 10px 0;
+        margin: 30px 0;
+    }
+    .header_container {
+      margin: 0;
+      width: 100%;
+    }
+    .header {
+      font-size: 40px;
+    }
+    .header_sm {
+      font-size: 25px;
+    }
+}
+
+@media screen and (min-width: 1080px) {
+    .content_container {
+        width: 60%;
+    }
 }
