--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,13 @@ body {
 }
 
 .root {
-  background-image: url("assets/place_on_fire.png");
-  background-position: 400cm 75cm;
-  /*background-repeat: no-repeat;*/
-  opacity: 0.4;
+  background-image: url("assets/great-haze.png");
+  /*background-position: 0cm 10cm;*/
+  background-repeat: no-repeat;
+  /*opacity: 0.5;*/
   left: 0;
   width: 100%;
-  height: 25%;
+  height: 100%;
   position: absolute;
   top: 0;
   z-index: -1;
@@ -38,38 +38,40 @@ body {
 .header_container {
   display: flex;
   flex-direction: column;
-  margin: auto;
-  width: 80%;
+  margin: 250px auto 0 auto;
+  width: 100%;
 }
 
 .header {
-  color: white;
+  color: #424242;
+  font-size: 70px;
+  letter-spacing: .05em;
+  width: 70%;
+  margin: 10px auto;
+  text-align: center;
+  text-shadow: #fff 0px 0px 40px;
+  /*text-shadow: 1px 1px #6EDD6C,
+               2px 2px #6EDD6C,
+               3px 3px #6EDD6C,
+               4px 4px #6EDD6C,
+               5px 5px #6EDD6C,
+               6px 6px #6EDD6C;*/
+}
+
+.header_sm {
+  color: #424242;
   font-size: 50px;
   letter-spacing: .05em;
   width: 70%;
   margin: 10px auto;
   text-align: center;
-  text-shadow: 1px 1px #fe4902,
-               2px 2px #fe4902,
-               3px 3px #fe4902,
-               4px 4px #fe4902,
-               5px 5px #fe4902,
-               6px 6px #fe4902;
-}
-
-.header_sm {
-  color: white;
-  font-size: 35px;
-  letter-spacing: .05em;
-  width: 70%;
-  margin: 10px auto;
-  text-align: center;
-  text-shadow: 1px 1px #fe4902,
-               2px 2px #fe4902,
-               3px 3px #fe4902,
-               4px 4px #fe4902,
-               5px 5px #fe4902,
-               6px 6px #fe4902;
+  text-shadow: #fff 0px 0px 40px;
+  /*text-shadow: 1px 1px #6EDD6C,
+               2px 2px #6EDD6C,
+               3px 3px #6EDD6C,
+               4px 4px #6EDD6C,
+               5px 5px #6EDD6C,
+               6px 6px #6EDD6C;*/
 }
 
 .img {
